bug squish analyses md, updated readme, styles analyses page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -434,4 +434,9 @@ body {
   height: 8rem
 }
 
+.analysisCard {
+  max-width: 80%;
+  max-height: 80%;
+}
+
 
